--- a/MVCMusicStore/MVCMusicStore.csproj
+++ b/MVCMusicStore/MVCMusicStore.csproj
@@ -302,6 +302,8 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
+    <Content Include="Views\Home\Sample.cshtml" />
+    <Content Include="Views\Store\Browse.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
