--- a/MVCMusicStore/MVCMusicStore.csproj
+++ b/MVCMusicStore/MVCMusicStore.csproj
@@ -317,6 +317,7 @@
     <Content Include="Views\StoreManager\Create.cshtml" />
     <Content Include="Views\StoreManager\Edit.cshtml" />
     <Content Include="Views\StoreManager\Delete.cshtml" />
+    <Content Include="Views\Home\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
