--- a/MVCMusicStore/Web.config
+++ b/MVCMusicStore/Web.config
@@ -13,6 +13,8 @@
       providerName="System.Data.SqlClient" />
     <add name="MusicStoreDB" connectionString="Server=devmachine\sillygoose; Database=MusicStore; Uid=Adam; Pwd=password;"
       providerName="System.Data.SqlClient" />
+    <add name="ShoppingCartDB" connectionString="Server=devmachine\sillygoose; Database=MusicStore; Uid=Adam; Pwd=password;"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
